--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -26,10 +26,16 @@ android {
 dependencies {
     implementation project(':FtcRobotController')
     annotationProcessor files('lib/OpModeAnnotationProcessor.jar')
-    testImplementation 'junit:junit:4.13.2'
+
+    // jUnit 4
+    testImplementation 'junit:junit:4.13'
+    // testImplementation 'junit:junit:4.13.2'
+
+    // jUnit 5
     // testImplementation 'org.junit.jupiter:junit-jupiter'
-    // testImplementation 'org.junit.jupiter:junit-jupiter-api:5.0.0-M2'
-    // testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
+    // testImplementation("org.junit.jupiter:junit-jupiter-api:5.8.1")
+    // testImplementation("org.junit.jupiter:junit-jupiter-params:5.8.1")
+    // testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:5.8.1")
 }
 
 // test {
